--- a/projetos.html
+++ b/projetos.html
@@ -13,7 +13,7 @@
             <a href="index.html">Sobre Mim</a>
         </li>
         <li>
-            <a href="Projetos.html">Projetos</a>
+            <a href="projetos.html">Projetos</a>
         </li>
         <li>
             <a href="contatos.html">Contatos</a>
